[package]
authors = ["Pascal Hertleif <killercup@gmail.com>"]
name = "waltz"
version = "0.2.0"
description = "Extract code blocks from Markdown and save them as files."
readme = "../Readme.md"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "Cargo.toml"]
repository = "https://github.com/killercup/waltz"
documentation = "https://docs.rs/waltz"
keywords = ["markdown", "documentation", "testing"]
categories = ["development-tools::testing"]

[dependencies]
log = "0.3.6"
pulldown-cmark = "0.0.8"
regex = "0.2.0"
lazy_static = "0.2.4"
error-chain = "0.10.0"

[dev-dependencies]
tempdir = "0.3"
unindent = "0.1"
