[package]
authors = ["Pascal Hertleif <killercup@gmail.com>"]
name = "waltz"
version = "0.3.0"
description = "Extract code blocks from Markdown and save them as files."
readme = "../Readme.md"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "Cargo.toml"]
repository = "https://github.com/killercup/waltz"
documentation = "https://docs.rs/waltz"
keywords = ["markdown", "documentation", "testing"]
categories = ["development-tools::testing"]

[dependencies]
log = "0.4"
pulldown-cmark = "0.1"
error-chain = "0.10.0"
regex = "0.2.5"
lazy_static = "1.0.0"

[dev-dependencies]
tempdir = "0.3"
unindent = "0.1"

[badges]
travis-ci = { repository = "killercup/waltz" }
