[package]
name = "waltz_cli"
version = "0.1.0"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
readme = "../Readme.md"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "Cargo.toml"]
repository = "https://github.com/killercup/waltz"
keywords = ["markdown", "documentation", "testing"]
categories = ["development-tools::testing"]

[dependencies]
clap = "2.21.1"
waltz = "0.2"
pulldown-cmark = "0.0.8"
error-chain = "0.10.0"
log = "0.3.6"
loggerv = "0.2.0"
